Update DESCRIPTION and spitfire_theme.R for Verdana font and dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     ggplot2,
     plotly,
     knitr,
-    kableExtra
+    kableExtra,
+    extrafont
 RoxygenNote: 7.1.2
 Suggests:
     remotes,
