--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Custom Themes and Palettes for ggplot2 and plotly
 Version: 0.1.0
 Authors@R: c(
-    person("Brian", "Balzar", email = "brian.balzar@spitfire-data.com, role = c("aut", "cre"))
+    person("Brian", "Balzar", email = "your.email@example.com", role = c("aut", "cre"))
 )
 Description: Provides custom themes and color palettes for ggplot2 and plotly, designed for professional and clean visualizations suitable for business and academic presentations.
 License: MIT + file LICENSE
